--- a/SNR.Common/SNR.Common.csproj
+++ b/SNR.Common/SNR.Common.csproj
@@ -5,10 +5,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
-    <PackageReference Include="SNR.Utilities" Version="1.0.7" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="SNR.Utilities" Version="1.1.1-beta1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <LangVersion>preview</LangVersion>
@@ -30,7 +30,7 @@
 	  <RepositoryUrl>https://github.com/sooneer/SNR.Common</RepositoryUrl>
 	  <RepositoryType>git</RepositoryType>
 	  <PackageTags>SNR;Common</PackageTags>
-	  <Version>1.0.8-beta4</Version>
+	  <Version>1.1.1-beta1</Version>
   </PropertyGroup>
 
   <ItemGroup>
